--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
 </head>
 <body data-ng-app="myApp" data-ng-controller="myController">
     <div>
+		<h2>My Project</h2>
         <input type="text" data-ng-model="searchText.firstName" />
         <table>
             <tr>
